<resources>
    <string name="app_name">iBeebo</string>
    <string name="private_message_list">"私信对话"</string>
    <string name="action_settings">设置</string>
    <string name="img_folder_name">文件名称</string>
    <string name="img_number">张</string>
    <string name="img_select">确定</string>
    <string name="default_text_pic_weibo">分享图片</string>
    <string name="net_not_avaliable">网络异常</string>
    <string name="text_is_empty">没有文字或图片</string>
    <string name="send_wei_ing">带你装逼，带你飞！</string>
    <string name="send_tomanay_pics">最多同时发送1张图片</string>
    <string name="fetch_new_weiba">获取最新尾巴！</string>
    <string name="send_weibo">发送</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="weibo_home_page">微博首页</string>
    <string name="weibo_change_account">切换帐号</string>
    <string name="weibo_detail">微博正文</string>
    <string name="oauthing">授权中</string>
    <string name="sina_server_error">检测到你跳转到错误页面，这是因为新浪微博第三方认证服务器出错，多次重复操作依然不行的话尝试换网络</string>
    <string name="token_expires_in_time">请注意，根据新浪微博的平台政策，刚添加的帐号会在 %s
        天后过期，到时需要重新登录，在授权过期之前重复登陆不会刷新剩余天数</string>
    <string name="your_token_is_expired">检测到你的授权信息已经过期了，请重新授权一次</string>
    <string name="logout_to_login_again">返回帐号管理页面，重新授权</string>
    <string name="dialog_title_error">出错啦</string>
    <string name="login_again">重新授权</string>
    <string name="have_account_whose_token_is_expired">有帐号已经过期，无法收取新消息</string>
    <string name="token_has_expired">已过期</string>
    <string name="account_token_has_expired">%s 的授权已经过期，请重新授权</string>
    <string name="title_changelog">更新日志</string>
    <string name="changelog_close">关闭</string>
    <string name="empty">空</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="close">关闭</string>
    <string name="share">分享</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="copy_successfully">复制完成</string>
    <string name="have_copied">已经复制 %s</string>
    <string name="open">打开</string>
    <string name="copy">复制</string>
    <string name="timeout">网络有问题，连不上</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="unknown_sina_network_error">新浪微博某些网络节点又出故障，换个网络试试</string>
    <string name="sd_card_in_not_mounted">SD卡未挂载</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">权限出错，无法读取存储空间，需要用户手动删除SD卡下的
        /Android/data/org.zarroboogs.weibo 目录</string>
    <string name="refresh">刷新</string>
    <string name="no_new_message">没有新消息</string>
    <string name="total">共计</string>
    <string name="new_messages_count">%s条新消息</string>
    <string name="new_messages">条新消息</string>
    <string name="browser_all_messages">浏览全部微博</string>
    <string name="following_list">关注列表</string>
    <string name="fan_list">粉丝列表</string>
    <string name="topic_number">话题数</string>
    <string name="topic_list">话题列表</string>
    <string name="weibo_number">微博数</string>
    <string name="follow_him">关注</string>
    <string name="manage_group">管理分组</string>
    <string name="unfollow_him">取消关注</string>
    <string name="follow_successfully">关注成功</string>
    <string name="unfollow_successfully">已经取消关注</string>
    <string name="modify_successfully">修改完成</string>
    <string name="remove_fan_successfully">Ta 已经不再关注你了</string>
    <string name="is_following_me">正在关注</string>
    <string name="mentions_me">与我相关</string>
    <string name="comments">评论</string>
    <string name="status_like">点赞</string>
    <string name="status_unlike">取消点赞</string>
    <string name="comments_weibo">评论微博</string>
    <string name="private_message">微博私信</string>
    <string name="favourite_weibo">我的收藏</string>
    <string name="repost">转发</string>
    <string name="write_weibo">写微博</string>
    <string name="at_other">添加好友</string>
    <string name="clear_content">清空内容</string>
    <string name="are_you_sure">确定吗？</string>
    <string name="ask_clear">清空内容？</string>
    <string name="short_content_middle">精简中间\@</string>
    <string name="short_content_right">精简右侧\@</string>
    <string name="clear">清空</string>
    <string name="add_emoticon">添加表情</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="retry_send">重新发送</string>
    <string name="send_faile_click_to_open">发送失败，点击打开</string>
    <string name="background_sending">发送中</string>
    <string name="wait_server_response">发送完，等结果</string>
    <string name="send_photo">发送照片</string>
    <string name="dont_have_account">没用可用的发微博帐号</string>
    <string name="content_cant_be_empty">内容不能为空</string>
    <string name="content_cant_be_empty_and_dont_have_account">内容不能为空，当前也没可用的发微博帐号</string>
    <string name="content_words_number_too_many">字数太多了</string>
    <string name="enable_comment_when_repost">评论给当前微博</string>
    <string name="enable_comment_to_ori_when_repost">评论给原微博</string>
    <string name="comment_detail">评论</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="dont_have_camera_app">该设备没有拍照应用</string>
    <string name="select">选择</string>
    <string name="get_the_last_picture">刚拍的照片</string>
    <string name="take_camera">拍照</string>
    <string name="select_pic">图库</string>
    <string name="send">发送</string>
    <string name="sending">发送中</string>
    <string name="say_something">说点什么吧…</string>
    <string name="save_to_draft">保存到草稿箱</string>
    <string name="do_you_want_to_save">要保存到草稿箱吗？</string>
    <string name="save">保存</string>
    <string name="failed_reason">发送失败：%s</string>
    <string name="you_cancel_login">你取消了授权</string>
    <string name="account_management">帐号管理</string>
    <string name="add_account">添加</string>
    <string name="oauth_login">网页授权</string>
    <string name="sending_comment">发送评论</string>
    <string name="sending_repost">发送转发</string>
    <string name="save_pic_album">保存到图片文件夹</string>
    <string name="cant_save_pic">发生错误，无法保存</string>
    <string name="save_to_album_successfully">保存成功</string>
    <string name="cant_open_deleted_weibo">原微博已经被删除，看不懂中文吗？</string>
    <string name="retry_download_pic">重新下载图片</string>
    <string name="fetching_weibo_info">获取微博信息…</string>
    <string name="comment_is_empty">没有评论</string>
    <string name="repost_is_empty">没有转发</string>
    <string name="nearby">周边</string>
    <string name="bilateral">互相关注</string>
    <string name="remove_fan">移除粉丝</string>
    <string name="all_people">所有人</string>
    <string name="mentions_weibo">"微博提及"</string>
    <string name="all_people_send_to_me">收到评论</string>
    <string name="mentions_to_me">"评论提及"</string>
    <string name="my_comment">发出的评论</string>
    <string name="following_number">关注数</string>
    <string name="fan_number">粉丝数</string>
    <string name="blog_url">博客</string>
    <string name="personal_info">个人资料</string>
    <string name="intro">简介</string>
    <string name="nickname">昵称</string>
    <string name="at">"@TA"</string>
    <string name="edit">编辑</string>
    <string name="edit_my_profile">编辑个人资料</string>
    <string name="edit_successfully">编辑资料成功</string>
    <string name="nickname_cant_be_empty">昵称不能为空</string>
    <string name="nickname_cant_have_space">昵称不能有空格</string>
    <string name="fetching_user_info">获取用户信息…</string>
    <string name="search">搜索</string>
    <string name="write_dm">写信</string>
    <string name="input_username">输入用户名</string>
    <string name="add_group">添加分组</string>
    <string name="input_group_name">输入分组名</string>
    <string name="modify_group_name">修改分组名称</string>
    <string name="remove_group">删除分组</string>
    <string name="remove_group_content">删除分组（不会取消关注）</string>
    <string name="group_name_must_less_than_ten_chinese_words">分组名限制在10个汉字内</string>
    <string name="do_favourite">收藏</string>
    <string name="un_favourite">取消收藏</string>
    <string name="fav_successfully">收藏成功</string>
    <string name="un_fav_successfully">取消成功</string>
    <string name="delete">删除</string>
    <string name="reply_to_comment">回复评论</string>
    <string name="view_weibo_str">查看微博</string>
    <string name="gps_is_searching">正在获取坐标...</string>
    <string name="please_open_gps">请打开GPS</string>
    <string name="search_topic">搜索话题</string>
    <string name="follow_topic_failed">关注失败</string>
    <string name="follow_topic_successfully">关注成功</string>
    <string name="unfollow_topic_failed">取消失败</string>
    <string name="unfollow_topic_successfully">取消成功</string>
    <string name="add_topic">添加话题</string>
    <string name="add_topic_hint">不需要#号</string>
    <string name="modify_remark">修改备注</string>
    <string name="remark">备注</string>
    <string name="new_remark">新备注</string>
    <string name="modify">修改</string>
    <string name="add_to_app_filter">过滤</string>
    <string name="filter_successfully">你以后都不会再见到这家伙了</string>
    <string name="ten_thousand">万</string>
    <string name="open_with_other_app">用外部应用打开</string>
    <string name="copy_link_to_clipboard">复制链接</string>
    <string name="share_link">分享链接</string>
    <string name="share_sum">微博统计的分享次数</string>
    <string name="cant_not_convert_to_weibo_id">链接地址无法解析成微博地址</string>
    <string name="converting_weibo_link">正在转换微博链接…</string>
    <string name="download_finished_but_cant_read_picture_file">下载完成，但是无法读取图片</string>
    <string name="picture_read_failed">图片解析失败</string>
    <string name="wait_for_download_picture">等待图片下载…</string>
    <string name="picture_cant_download_or_sd_cant_read">图片下载失败或是SD卡无法读取</string>
    <string name="at_him">"@他"</string>
    <string name="setting">软件设置</string>
    <string name="at_user_title">"@微博用户"</string>
    <string name="pref_normal_title">常规</string>
    <string name="pref_sound_title">音效</string>
    <string name="pref_advanced_title">高级</string>
    <string name="have_selected">已经选择了%s项</string>
    <string name="pref_theme_title">主题</string>
    <string name="pref_listview_title">列表</string>
    <string name="pref_list_pic_mode_title">微博图片</string>
    <string name="pref_list_avatar_mode_title">头像画质</string>
    <string name="pref_font_size_title">字体大小</string>
    <string name="pref_new_message_title">未读消息</string>
    <string name="pref_disable_notification_at_night_title">深夜勿扰</string>
    <string name="pref_disable_notification_at_night_summary">凌晨1点到早上8点暂停</string>
    <string name="pref_new_message_type_title">类型</string>
    <string name="pref_mention_to_me_title">\@我的微博</string>
    <string name="pref_comment_to_me_title">收到的评论</string>
    <string name="pref_mention_comment_to_me_title">\@我的评论</string>
    <string name="pref_notification_feedback_title">提醒方式</string>
    <string name="pref_vibrate_title">振动</string>
    <string name="pref_led_title">呼吸灯</string>
    <string name="pref_ringtone_title">铃声</string>
    <string name="new_unread_messages">%s 条消息</string>
    <string name="notification">通知</string>
    <string name="frequency">间隔</string>
    <string name="pref_disable_download_pic_title">无图模式</string>
    <string name="pref_disable_download_pic_summary">关闭微博图片下载，节省流量</string>
    <string name="filter">首页过滤</string>
    <string name="pref_about_title">关于</string>
    <string name="pref_support_title">支持</string>
    <string name="pref_official_weibo_title">"@andforce</string>
    <string name="pref_play_store_address_title">去App市场反馈</string>
    <string name="pref_play_store_address_summary">打分支持该应用</string>
    <string name="developer_weibo">访问开发者微博,获取最新版本信息</string>
   	<string name="left_drawer_hotweibo">热门微博</string>
   	<string name="left_drawer_hothuati">热门话题</string>
</resources>