<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_fetch_msg"
        android:summary="控制下面所有通知开关"
        android:title="通知总开关" />

    <PreferenceCategory android:title="@string/pref_new_message_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_fetch_msg"
            android:key="disable_fetch_at_night"
            android:summary="@string/pref_disable_notification_at_night_summary"
            android:title="@string/pref_disable_notification_at_night_title" />

        <ListPreference
            android:defaultValue="1"
            android:dependency="enable_fetch_msg"
            android:dialogTitle="@string/frequency"
            android:entries="@array/frequency"
            android:entryValues="@array/frequency_value"
            android:key="frequency"
            android:title="@string/frequency" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_new_message_type_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_fetch_msg"
            android:key="mention_to_me"
            android:title="@string/pref_mention_to_me_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_fetch_msg"
            android:key="comment_to_me"
            android:title="@string/pref_comment_to_me_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_fetch_msg"
            android:key="mention_comment_to_me"
            android:title="@string/pref_mention_comment_to_me_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_feedback_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enable_fetch_msg"
            android:key="vibrate"
            android:title="@string/pref_vibrate_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enable_fetch_msg"
            android:key="led"
            android:title="@string/pref_led_title" />

        <Preference
            android:dependency="enable_fetch_msg"
            android:key="ringtone"
            android:title="@string/pref_ringtone_title" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>