<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_at"
        android:title="@string/at"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_manage_group"
        android:title="@string/manage_group"
        android:visible="false"/>
    <item
        android:id="@+id/menu_follow"
        android:title="@string/follow_him"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>
    <item
        android:id="@+id/menu_unfollow"
        android:title="@string/unfollow_him"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>
    <item
        android:id="@+id/menu_remove_fan"
        android:title="@string/remove_fan"
        android:visible="false"/>
    <item
        android:id="@+id/menu_modify_remark"
        android:title="@string/modify_remark"/>
    <item
        android:id="@+id/menu_add_to_app_filter"
        android:title="@string/add_to_app_filter"/>
    <!--<item-->
    <!--android:id="@+id/menu_refresh"-->
    <!--android:icon="?refresh"-->
    <!--android:title="@string/refresh"/>-->


</menu>