<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="8dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:paddingTop="8dp"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_drawer_menu"
        android:orientation="horizontal">

        <Button
            android:id="@+id/homeButton"
            style="@style/drawerMenuButton"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_view_day_grey600_24dp"
            android:text="@string/weibo_home_page"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/tv_home_count"
            style="@style/drawerMessageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="0"
            android:visibility="gone"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_location"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_menu_location"
        android:text="@string/nearby"
        android:visibility="gone"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/btnHotWeibo"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/hot_weibo_gray"
        android:text="@string/left_drawer_hotweibo"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/btnHotHuaTi"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/hot_huati_gray"
        android:text="@string/left_drawer_hothuati"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/btn_favourite"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_book_grey600_24dp"
        android:text="@string/favourite_weibo"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/leftDrawerSettingBtn"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_settings_applications_grey600_24dp"
        android:text="@string/setting"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/btnHotModel"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/hot_model_gray"
        android:text="车模热图"
        android:visibility="gone"
        tools:ignore="RtlHardcoded"/>

</LinearLayout>